# dtkai

./: CMakeLists.txt  README.md  README.zh_CN.md
.reuse/: dep5
debian/: changelog  control  copyright  libdtkai-dev.install  libdtkai.install
examples/: CMakeLists.txt
examples/chat/: CMakeLists.txt  chat.cpp  chat_stream.cpp  functioncalling.cpp
include/dtkai/: DChatCompletions  DFunctionCalling  dchatcompletions.h  dfunctioncalling.h  dtkai_global.h  dtkaierror.h  dtkaitypes.h
src/: CMakeLists.txt
src/chat/: dchatcompletions.cpp  dchatcompletions_p.h  dfunctioncalling.cpp  dfunctioncalling_p.h
